src/main/java/com/example/todo/common/exception/error/CustomJwtRuntimeException.java
package com.example.todo.common.exception.error;

import com.example.todo.common.exception.ErrorCode;

public class CustomJwtRuntimeException extends RuntimeException{
    public CustomJwtRuntimeException(){
        super(ErrorCode.AUTHENTICATION_FAILED.getMessage());
    }
}
